--- a/media/style.css
+++ b/media/style.css
@@ -1597,10 +1597,8 @@ background: -webkit-linear-gradient(30deg, transparent,transparent,#999999,#fff,
   height: 60px;
   overflow: hidden;
   width: 100%;
-  background: -moz-linear-gradient(left, #000,#000,#000, #000,#000, transparent,transparent);
-  background: -webkit-linear-gradient(left, #000,#000,#000, #000,#000, transparent,transparent);
-  background: linear-gradient(left,#000,#000,#000, #000,#000, transparent,transparent);
-  opacity: .96;
+  background: #000;
+  opacity: .97;
   z-index: 1;
 }
 
@@ -1720,6 +1718,7 @@ overflow: hidden;
   width: 50%;
   background:#fff ;
   float: left;
+  z-index: 2;
 }
 
 #mymixes{
@@ -1727,10 +1726,53 @@ overflow: hidden;
   left:0;
   top:0;
   height: 80px;
-  width: 100%;
   overflow: hidden;
+  width: 100%;
   background:  transparent;
 }
+
+#hidmyplaylistmixes{
+  position: absolute;
+  top:-80px;
+  right: 0;
+  height: 80px;
+  width:40%;
+  background:  #fff;
+  float: right;
+  z-index: 2;
+  display: none;
+}
+
+#hidmyplaylistmixes:after{
+  content: '';
+  position: absolute;
+  left:50px;
+  top:0;
+  height: 100%;
+  width: 100%;
+  background:  #000;
+  transform: skewX(-30deg);
+  z-index: 1;
+}
+
+#hidmyplaylistmixes span{position:relative;display:block;height: 100%;background:#9900cc;z-index: 3; transform: skewX(-30deg);}
+
+#hidmyplaylistmixes span:nth-child(1){margin-left:20%;width:20px;float: left;}
+#hidmyplaylistmixes span:nth-child(2){margin-left:10%;width:20px;float: left;}
+#hidmyplaylistmixes span:nth-child(3){margin-left:10%;width:20px;float: left;}
+#hidmyplaylistmixes span:nth-child(4){margin-left:10%;width:20px;float: left;}
+#hidmyplaylistmixes span:nth-child(5){margin-left:15%;width:20px;float: left;}
+
+#mymixes{
+  position: relative;
+  left:0;
+  top:0;
+  height: 80px;
+  overflow: hidden;
+  width: 100%;
+  background:  transparent;
+}
+
 #mixes{
   position: relative;
   left:0;
@@ -1741,6 +1783,7 @@ overflow: hidden;
   text-decoration: underline;
   text-align: center;
   line-height: 80px;
+   z-index: 1;
 }
 #intromixes{
   position: relative;
@@ -1756,10 +1799,10 @@ overflow: hidden;
   left:0;
   top:0;
   color: #fff;
-  font-size: 2em;
+  font-size: 1.7em;
   font-family:'Cutive Mono';
   text-align: center;
-  text-decoration: underline;
+    font-style: italic;
   line-height: 60px;
   font-weight: bolder;
   letter-spacing: 1px;
@@ -1779,8 +1822,8 @@ overflow: hidden;
   position: relative;
   left:0;
   top:0;
-  color: #000;
-  font-size: 1.5em;
+  color: #cc00ff;
+  font-size: 1.2em;
   font-family:'Comic Sans MS';
   text-align:left;
   padding-left: 20px;
@@ -1793,9 +1836,60 @@ overflow: hidden;
   position: relative;
   left:3%;
   bottom:0;
-  height: calc(100% - 200px);
+  height: calc(100% - 250px);
   width: 94%;
   background:#000;
+}
+
+#viewalltrailers{
+  position: relative;
+  left:20px;
+  top:10px;
+  height: 40px;
+  width: 130px;
+  background:transparent;
+  cursor: pointer;
+}
+
+#viewalltrailers:before{
+  content: '';
+  position: absolute;
+  left:0;
+  top:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-left: 1px solid #9900cc;
+  border-top: 1px solid #9900cc;  
+  cursor: pointer;
+}
+
+#viewalltrailers:after{
+  content: '';
+  position: absolute;
+  right:0;
+  bottom:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-right: 1px solid #9900cc;
+  border-bottom: 1px solid #9900cc;  
+  cursor: pointer;
+}
+
+
+#viewall{
+  position: relative;
+  left:0;
+  top:0;
+  color: #9900cc;
+  font-size: 1.2em;
+  font-family:serif, 'Cutive Mono';
+  text-align:center;
+  line-height: 40px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  cursor: pointer;
 }
 
 #mixplaylistsection{
@@ -1806,7 +1900,256 @@ overflow: hidden;
   width: 50%;
   background:#9900cc;
   float: left;
+  z-index: 1;
 }
+
+#myplaylistmixes{
+  position: relative;
+  left: 0;
+  top:0;
+  height: 80px;
+  width:100%;
+  background:  #fff;
+     z-index: 2;
+}
+
+#myplaylistmixes:after{
+  content: '';
+  position: absolute;
+  left:50px;
+  top:0;
+  height: 100%;
+  width: 100%;
+  background:  #000;
+  transform: skewX(-30deg);
+  z-index: 1;
+}
+
+
+
+#myplaylistmixes span{position:relative;display:block;height: 100%;background:#9900cc;z-index: 3; transform: skewX(-30deg);}
+
+#myplaylistmixes span:nth-child(1){margin-left:20%;width:20px;float: left;}
+#myplaylistmixes span:nth-child(2){margin-left:15%;width:20px;float: left;}
+#myplaylistmixes span:nth-child(3){margin-left:15%;width:20px;float: left;}
+#myplaylistmixes span:nth-child(4){margin-left:15%;width:20px;float: left;}
+#myplaylistmixes span:nth-child(5){margin-left:15%;width:20px;float: left;}
+
+
+#playlistmixes{
+  position: relative;
+  left:0;
+  top:0;
+  height: 60px;
+  width: 100%;
+  background:#000;
+}
+
+#mixesplaylist{
+  position: relative;
+  left:0;
+  top:0;
+  color: #fff;
+  font-size: 1.7em;
+  font-family:'Cutive Mono';
+  text-align: center;
+  font-style: italic;
+  line-height: 60px;
+  font-weight: bolder;
+  letter-spacing: 1px;
+}
+
+
+#playlistrec{
+  position: relative;
+  left:0;
+  top:0;
+  height: 50px;
+  width: 100%;
+  background:transparent;
+}
+
+
+#recplaylist{
+  position: relative;
+  left:0;
+  top:0;
+  color: #fff;
+  font-size: 1.2em;
+  font-family:'Comic Sans MS';
+  text-align:left;
+  padding-left: 20px;
+  line-height: 50px;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+#theplaylist{
+  position: relative;
+  left:3%;
+  bottom:0;
+  height: calc(100% - 250px);
+  width: 94%;
+  background:#000;
+}
+
+#viewallplaylist{
+  position: relative;
+  left:20px;
+  top:10px;
+  height: 40px;
+  width: 130px;
+  background:transparent;
+  cursor: pointer;
+}
+#viewallplaylist:before{
+  content: '';
+  position: absolute;
+  left:0;
+  top:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-left: 1px solid #fff;
+  border-top: 1px solid #fff;  
+  cursor: pointer;
+}
+
+#viewallplaylist:after{
+  content: '';
+  position: absolute;
+  right:0;
+  bottom:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-right: 1px solid #fff;
+  border-bottom: 1px solid #fff;  
+  cursor: pointer;
+}
+
+
+#viewall1{
+  position: relative;
+  left:0;
+  top:0;
+  color: #fff;
+  font-size: 1.2em;
+  font-family:serif, 'Cutive Mono';
+  text-align:center;
+  line-height: 40px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
+
+#viewfullplaylist{
+  position: relative;
+  right:20px;
+  top:-30px;
+  height: 40px;
+  width: 170px;
+  float:right;
+  background:transparent;
+  cursor: pointer;
+}
+#viewfullplaylist:before{
+  content: '';
+  position: absolute;
+  left:0;
+  top:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-left: 1px solid #000;
+  border-top: 1px solid #000;  
+  cursor: pointer;
+}
+
+#viewfullplaylist:after{
+  content: '';
+  position: absolute;
+  right:0;
+  bottom:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;  
+  cursor: pointer;
+}
+
+
+#viewfull{
+  position: relative;
+  left:0;
+  top:0;
+  color: #000;
+  font-size: 1.2em;
+  font-family:serif, 'Cutive Mono';
+  text-align:center;
+  line-height: 40px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
+
+
+
+
+#viewtrailers{
+  position: relative;
+  right:20px;
+  top:-30px;
+  height: 40px;
+  width: 170px;
+  float:right;
+  background:transparent;
+  cursor: pointer;
+}
+#viewtrailers:before{
+  content: '';
+  position: absolute;
+  left:0;
+  top:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-left: 1px solid #000;
+  border-top: 1px solid #000;  
+  cursor: pointer;
+}
+
+#viewtrailers:after{
+  content: '';
+  position: absolute;
+  right:0;
+  bottom:0;
+  height: 50%;
+  width: 50%;
+  background:transparent;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;  
+  cursor: pointer;
+}
+
+
+#viewvideotrailers{
+  position: relative;
+  left:0;
+  top:0;
+  color: #000;
+  font-size: 1.2em;
+  font-family:serif, 'Cutive Mono';
+  text-align:center;
+  line-height: 40px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
 
 #worksection{
   position: absolute;
@@ -1860,6 +2203,26 @@ overflow: hidden;
   height: 100%;
   width:100%;
 
+}
+
+#mymixes{
+  position: relative;
+  left:0;
+  top:0;
+  height: 80px;
+  overflow: hidden;
+  width: 50%;
+}
+
+#hidmyplaylistmixes{
+  position: relative;
+  right: 0;
+  top:0;
+  height: 80px;
+  width:50%;
+  background:  #fff;
+  z-index: 2;
+  display: block;
 }
 
 #mixplaylistsection{
@@ -2082,6 +2445,53 @@ overflow: hidden;
   background: linear-gradient(30deg,transparent,#000000, #000000,#000,#000, #000,#000000, transparent);
 }
 
+#mymixes{
+  position: relative;
+  left:0;
+  top:0;
+  height: 60px;
+  overflow: hidden;
+  width: 50%;
+}
+
+#mixes{
+  position: relative;
+  left:0;
+  top:70%;
+  color: #9900cc;
+  font-size: 1.85em;
+  font-family:'Elephant';
+  text-decoration: underline;
+  text-align: center;
+  line-height: 60px;
+   z-index: 1;
+}
+
+#hidmyplaylistmixes{
+  position: relative;
+  right: 0;
+  top:0;
+  height: 60px;
+  width:50%;
+  background:  #fff;
+  z-index: 2;
+  display: block;
+}
+
+#intro{
+  font-size: 1.35em;
+}
+
+
+#introtrailers{
+  position: relative;
+  left:3%;
+  bottom:0;
+  height: calc(100% - 230px);
+  width: 94%;
+  background:#000;
+}
+
 #worksection{
 
   background: -moz-linear-gradient(30deg,transparent,#000000, #000000,#000,#000, #000,#000000, transparent);
@@ -2112,6 +2522,15 @@ overflow: hidden;
 #productsselect-options{
   text-align: right;
 }
+
+#hidmyplaylistmixes span:nth-child(1){margin-left:30%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(2){margin-left:10%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(3){margin-left:10%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(4){margin-left:10%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(5){margin-left:10%;width:10px;float: left;}
+
+
+
 }
 
 /*//////////////////////////////////////////////////////////////////////////500//////////////////////////////////////////////////////////////////////////////////////*/
@@ -2196,6 +2615,81 @@ option{
   text-align: right;
 }
 
+#mymixes{
+  position: relative;
+  left:0;
+  top:0;
+  height: 60px;
+  overflow: hidden;
+  width: 40%;
+}
+
+#mixes{
+  position: relative;
+  left:0;
+  top:70%;
+  color: #9900cc;
+  font-size: 1.5em;
+  font-family:'Elephant';
+  text-decoration: underline;
+  text-align: center;
+  line-height: 60px;
+   z-index: 1;
+}
+
+#hidmyplaylistmixes{
+  height: 60px;
+}
+
+#intromixes{
+  height: 50px;
+}
+
+
+#intro{
+  font-size: 1.3em;
+  line-height: 50px;
+
+}
+
+#introtrailers{
+  position: relative;
+  left:3%;
+  bottom:0;
+  height: calc(100% - 220px);
+  width: 94%;
+  background:#000;
+}
+
+#viewalltrailers{
+  top:15px;
+  height: 30px;
+  width: 120px;
+}
+
+
+
+#viewall{
+  font-size: .98em;
+  line-height: 30px;
+}
+
+
+#viewfullplaylist{
+  top:-15px;
+  height: 30px;
+  width: 150px;
+}
+
+#viewfull{
+  font-size: .98em;
+  line-height: 30px;
+}
+
+#rectrailers{
+  font-size: 1em;
+}
+
 }
 
 
@@ -2244,6 +2738,49 @@ option{
 #productsselect-options{
   text-align: right;
 }
+
+#hidmyplaylistmixes span:nth-child(1){margin-left:30%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(2){margin-left:7%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(3){margin-left:7%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(4){margin-left:7%;width:10px;float: left;}
+#hidmyplaylistmixes span:nth-child(5){margin-left:8%;width:10px;float: left;}
+
+
+#introtrailers{
+  position: relative;
+  left:3%;
+  bottom:0;
+  height: calc(100% - 205px);
+  width: 94%;
+  background:#000;
+}
+
+
+#viewalltrailers{
+  top:15px;
+  height: 25px;
+  width: 100px;
+}
+
+
+
+#viewall{
+  font-size: .8em;
+  line-height: 25px;
+}
+
+
+#viewfullplaylist{
+  top:-10px;
+  height: 25px;
+  width: 130px;
+}
+
+#viewfull{
+  font-size: .8em;
+  line-height: 25px;
+}
+
 
 
 }
@@ -2359,6 +2896,17 @@ background:transparent;
 #products-defshome{
 background:transparent;
     float: left;
+}
+
+#intromixes{
+  height: 45px;
+}
+
+
+#intro{
+  font-size: 1.2em;
+  line-height: 45px;
+
 }
 
 
