--- a/media/style.css
+++ b/media/style.css
@@ -2553,31 +2553,6 @@ option{
   background:#0FF;
 }
 
-#viewalltrailers{
-  top:15px;
-  height: 30px;
-  width: 120px;
-}
-
-
-
-#viewall{
-  font-size: .7em;
-  color: #000;
-  line-height: 30px;
-}
-
-
-#viewfullplaylist{
-  top:-15px;
-  height: 30px;
-  width: 150px;
-}
-
-#viewfull{
-  font-size: .7em;
-  line-height: 30px;
-}
 }
 
 
@@ -2702,6 +2677,41 @@ option{
   text-align: right;
 }
 
+#introtrailers{
+  position: relative;
+  left:3%;
+  bottom:0;
+  height: calc(100% - 210px);
+  width: 94%;
+  background:#000;
+}
+
+
+#viewalltrailers{
+  top:15px;
+  height: 25px;
+  width: 100px;
+}
+
+
+
+#viewall{
+  font-size: .8em;
+  line-height: 25px;
+}
+
+
+#viewfullplaylist{
+  top:-10px;
+  height: 25px;
+  width: 130px;
+}
+
+#viewfull{
+  font-size: .8em;
+  line-height: 25px;
+}
+
 }
 
 
@@ -2748,34 +2758,6 @@ option{
   width: 94%;
   background:#000;
 }
-
-
-#viewalltrailers{
-  top:15px;
-  height: 25px;
-  width: 100px;
-}
-
-
-
-#viewall{
-  font-size: .65em;
-  line-height: 25px;
-}
-
-
-#viewfullplaylist{
-  top:-10px;
-  height: 25px;
-  width: 130px;
-}
-
-#viewfull{
-  font-size: .65em;
-  line-height: 25px;
-}
-
-
 
 }
 
@@ -2917,19 +2899,19 @@ background:transparent;
 
 
 #viewall{
-  font-size: .65em;
+  font-size: .85em;
   line-height: 35px;
 }
 
 
 #viewfullplaylist{
-  top:-15px;
+  top:-20px;
   height: 35px;
   width: 130px;
 }
 
 #viewfull{
-  font-size: .65em;
+  font-size: .85em;
   line-height: 35px;
 }
 
@@ -2991,7 +2973,7 @@ background:transparent;
 }
 
 
-#viewalltrailers{
+/*#viewalltrailers{
   top:20px;
   height: 25px;
   width: 100px;
@@ -3014,7 +2996,7 @@ background:transparent;
 #viewfull{
   font-size: .65em;
   line-height: 25px;
-}
+}*/
 
 
 }
@@ -3059,7 +3041,52 @@ background:transparent;
 }
 
 
+#mymixes{
+  height: 40px;
+}
 
+#mixes{
+  font-size: 1.3em;
+  line-height: 40px;
+}
+
+#hidmyplaylistmixes{
+  height: 40px;
+}
+
+
+#intromixes{
+  height: 35px;
+}
+
+#intro{
+  font-size: 1.1em;
+  line-height: 35px;
+}
+
+#introrec{
+  height: 30px;
+}
+
+
+#rectrailers{
+  font-size: .85em;
+  line-height: 30px;
+}
+
+#introtrailers{
+  height: calc(100% - 160px);
+}
+
+
+#viewalltrailers{
+  top:10px;
+}
+
+
+#viewfullplaylist{
+  top:-25px;
+}
 
 
 }
@@ -3143,67 +3170,39 @@ background:transparent;
 }
 
 
-
-#mymixes{
-  height: 40px;
-}
-
-#mixes{
-  font-size: 1.3em;
-  line-height: 40px;
-}
-
-#hidmyplaylistmixes{
-  height: 40px;
-}
-
-
-#intromixes{
-  height: 35px;
-}
-
-#intro{
-  font-size: 1.1em;
-  line-height: 35px;
-}
-
-#introrec{
-  height: 30px;
-}
-
-
-#rectrailers{
-  font-size: .85em;
-  line-height: 30px;
-}
-
 #introtrailers{
-  height: calc(100% - 140px);
+  position: relative;
+  left:3%;
+  bottom:0;
+  height: calc(100% - 150px);
+  width: 94%;
+  background:#000;
 }
 
 
 #viewalltrailers{
-  top:10px;
-  height: 20px;
+  height: 30px;
 }
 
 
 
 #viewall{
-  font-size: .5em;
-  line-height: 20px;
+  font-size: .9em;
+  line-height: 30px;
 }
 
 
 #viewfullplaylist{
-  top:-10px;
-  height: 20px;
+  top: -20px;
+  height: 30px;
 }
 
 #viewfull{
-  font-size: .5em;
-  line-height: 20px;
+  font-size: .9em;
+  line-height: 30px;
 }
+
+
 
 
 }
@@ -3221,6 +3220,44 @@ background:transparent;
 #productsselect-options{
     text-align: right;
 }
+
+
+
+#intromixes{
+  height: 30px;
+}
+
+#intro{
+  font-size: 1em;
+  line-height: 30px;
+}
+
+
+#introtrailers{
+  height: calc(100% - 135px);
+}
+
+#viewalltrailers{
+  height: 25px;
+  top:5px;
+}
+
+
+#viewfullplaylist{
+  height: 25px;
+  top:-20px;
+}
+
+#viewall{
+  font-size: .7em;
+  line-height: 25px;
+}
+#viewfull{
+  font-size: .7em;
+  line-height: 25px;
+}
+
+
 
 }
 
